--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,49 @@
 body {
     text-align: center;
 }
+
+.popup-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.438);
+}
+
+.popup-body {
+  position: relative;
+  width: 400px;
+  top:50%;
+  left:50%;
+  background: white;
+  transform: translate(-50%, -70%);
+}
+
+.popup-heading {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+.popup-title {
+  align-items: center;
+  padding-left: 29%;
+}
+
+.popup-buttons {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
+
+.popup-button {
+  width: 60px;
+  height: 30px;
+  background: gray;
+}
+
+.hide {
+  display: none;
+}
